corrected horizontal scroll bar, improved responsiveness

--- a/css/pluralCopy.css
+++ b/css/pluralCopy.css
@@ -129,7 +129,7 @@ footer ul{
 @media only screen  and (min-width: 619px) {
   body{
     display: grid;
-    grid-template-columns: 40% 60%
+    grid-template-columns: 50% 50%
   }
 
   .sideScreen{
@@ -137,10 +137,18 @@ footer ul{
   }
 
   .sideScreen{
-    width: 100%;
     background-color: rgba(0, 0, 0, 1);
     padding-left: 10%;
   }
+
+  /* aside{
+    background-color: blue;
+    background-image: url(./img/bg-gtm-2020.png);
+    background-repeat: no-repeat;
+    background-size: 80%;
+    background-position: right;
+  } */
+
   #backImg{
     width: 50%;
     max-width: 590px;
@@ -159,11 +167,11 @@ footer ul{
   #catchPhrase{
     color: rgba(255, 255, 255, 1);
     font-family: PS TT Commons Roman,Gotham SSm A,Gotham SSm B,Arial,sans-serif;
-    font-size: 2.3em;
+    font-size: 1.3em;
     max-width: 37%;
     line-height: 90%;
     padding-left: 3%;
-    margin-top: 30%;
+    margin-top: 50%;
   }
   #capSeat{
     display: grid;
@@ -173,7 +181,7 @@ footer ul{
     width: 12%;
     display: grid;
     grid-column: 1/2;
-    margin-top: -17%;
+    margin-top: -27%;
   }
   #freeTrial{
     position: relative;
@@ -190,5 +198,34 @@ footer ul{
   #freeTrial:focus-visible{
     outline: solid 1px rgba(0, 255, 0, 1);
     outline-offset: -1px;
+  }
+}
+
+@media only screen  and (min-width: 868px) {
+  body{
+    display: grid;
+    grid-template-columns: 45% 55%
+  }
+  #catchPhrase{
+    font-size: 1.8em;
+    max-width: 37%;
+    margin-top: 40%;
+  }
+  #capSeat svg{
+    margin-top: -21%;
+  }
+}
+@media only screen  and (min-width: 1080px) {
+  body{
+    display: grid;
+    grid-template-columns: 40% 60%
+  }
+  #catchPhrase{
+    font-size: 2.3em;
+    max-width: 37%;
+    margin-top: 30%;
+  }
+  #capSeat svg{
+    margin-top: -17%;
   }
 }
